--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "localhost"
+baseURL = "https://marcom4rtinez.github.io/marcomartinez.ch/"
 title   = "Marco Martinez"
 languageCode = "en-us"
 theme = "hello-friend-ng"
