--- a/config.toml
+++ b/config.toml
@@ -1,165 +1,165 @@
 baseURL = "https://marcomartinez.ch/"
-title   = "Marco Martinez"
+title = "Marco Martinez"
 languageCode = "en-us"
 theme = "hello-friend-ng"
+paginate = 10
 
 PygmentsCodeFences = true
 PygmentsStyle = "monokai"
 
-paginate  = 10
 # rssLimit  = 10  # Maximum number of items in the RSS feed.
 copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
 # googleAnalytics = ""
 # disqusShortname = ""
 
 archetypeDir = "archetypes"
-contentDir   = "content"
-dataDir      = "data"
-layoutDir    = "layouts"
-publishDir   = "public"
+contentDir = "content"
+dataDir = "data"
+layoutDir = "layouts"
+publishDir = "public"
 
-buildDrafts  = false
-buildFuture  = false
+buildDrafts = false
+buildFuture = false
 buildExpired = false
 canonifyURLs = true
 
 enableRobotsTXT = true
-enableGitInfo   = false
-enableEmoji     = true
+enableGitInfo = false
+enableEmoji = true
 enableMissingTranslationPlaceholders = false
-disableRSS     = true
+disableRSS = true
 disableSitemap = false
-disable404     = false
+disable404 = false
 disableHugoGeneratorInject = false
 
 [permalinks]
-  posts = "/posts/:year/:month/:title/"
+blog = "/blog/:year/:title/"
 
 [author]
-  name = "Marco Martinez"
+name = "Marco Martinez"
 
 [blackfriday]
-  hrefTargetBlank = true
+hrefTargetBlank = true
 
 [taxonomies]
-  tag      = "tags"
-  category = "categories"
-  series   = "series"
+tag = "tags"
+category = "categories"
+series = "series"
 
 [params]
-  dateform        = "Jan 2, 2006"
-  dateformShort   = "Jan 2"
-  dateformNum     = "2006-01-02"
-  dateformNumTime = "2006-01-02 15:04"
+dateform = "Jan 2, 2006"
+dateformShort = "Jan 2"
+dateformNum = "2006-01-02"
+dateformNumTime = "2006-01-02 15:04"
 
-  # Metadata mostly used in document's head
-  # 
-  description = "Useful links corresponding to Marco Martinez"
-  keywords = ""
-  images = [""]
+# Metadata mostly used in document's head
+# 
+description = "Useful links corresponding to Marco Martinez"
+keywords = ""
+images = [""]
 
-  # Home subtitle of the index page.
-  #
-  homeSubtitle = ""
+# Home subtitle of the index page.
+#
+homeSubtitle = ""
 
-  # Set a background for the homepage
+# Set a background for the homepage
 #   backgroundImage = "assets/images/background.jpg"
 
-  # Prefix of link to the git commit detail page. GitInfo must be enabled.
-  #
-  # gitUrl = ""
+# Prefix of link to the git commit detail page. GitInfo must be enabled.
+#
+# gitUrl = ""
 
-  # Set disableReadOtherPosts to true in order to hide the links to other posts.
-  #
-  disableReadOtherPosts = false
+# Set disableReadOtherPosts to true in order to hide the links to other posts.
+#
+disableReadOtherPosts = false
 
-  # Enable theme toggle
-  # 
-  # This options enables the theme toggle for the theme. 
-  # Per default, this option is off. 
-  # The theme is respecting the prefers-color-scheme of the operating systeme. 
-  # With this option on, the page user is able to set the scheme he wants. 
-  enableThemeToggle = true
+# Enable theme toggle
+# 
+# This options enables the theme toggle for the theme. 
+# Per default, this option is off. 
+# The theme is respecting the prefers-color-scheme of the operating systeme. 
+# With this option on, the page user is able to set the scheme he wants. 
+enableThemeToggle = true
 
-  # Sharing buttons
-  #
-  # There are a lot of buttons preconfigured. If you want to change them,
-  # generate the buttons here: https://sharingbuttons.io
-  # and add them into your own `layouts/partials/sharing-buttons.html`
-  #
-  enableSharingButtons = true
+# Sharing buttons
+#
+# There are a lot of buttons preconfigured. If you want to change them,
+# generate the buttons here: https://sharingbuttons.io
+# and add them into your own `layouts/partials/sharing-buttons.html`
+#
+enableSharingButtons = true
 
-  # Global language menu
-  #
-  # Enables the global language menu.
-  #
-  enableGlobalLanguageMenu = true
+# Global language menu
+#
+# Enables the global language menu.
+#
+enableGlobalLanguageMenu = true
 
-  # Integrate Javascript files or stylesheets by adding the url to the external assets or by
-  # linking local files with their path relative to the static folder, e.g. "css/styles.css"
-  #
-  customCSS = []
-  customJS  = []
+# Integrate Javascript files or stylesheets by adding the url to the external assets or by
+# linking local files with their path relative to the static folder, e.g. "css/styles.css"
+#
+customCSS = []
+customJS = []
 
-  # Toggle this option need to rebuild SCSS, requires extended version of Hugo
-  #
-  justifyContent = false  # Set "text-align: justify" to .post-content.
+# Toggle this option need to rebuild SCSS, requires extended version of Hugo
+#
+justifyContent = false # Set "text-align: justify" to .post-content.
 
-  # Custom footer 
-  # If you want, you can easily override the default footer with your own content. 
-  #
-  [params.footer]
-    trademark = true
-    rss = false
-    copyright = true
-    author = true
+# Custom footer 
+# If you want, you can easily override the default footer with your own content. 
+#
+[params.footer]
+trademark = true
+rss = false
+copyright = true
+author = true
 
-    topText = []
-    bottomText = []
+topText = []
+bottomText = []
 
-  # Colors for favicons
-  #
-  [params.favicon.color]
-    mask = "#1b1c1d"
-    msapplication = "#1b1c1d"
-    theme = "#1b1c1d"
+# Colors for favicons
+#
+[params.favicon.color]
+mask = "#1b1c1d"
+msapplication = "#1b1c1d"
+theme = "#1b1c1d"
 
-  [params.logo]
-    logoMark     = ">"
-    logoText     = "$ cd /home/martinez"
-    logoHomeLink = "/"
-    # Set true to remove the logo cursor entirely.
-    # logoCursorDisabled = false
-    # Set to a valid CSS color to change the cursor in the logo.
-    # logoCursorColor    = "#67a2c9"
-    # Set to a valid CSS time value to change the animation duration, "0s" to disable.
-    # logoCursorAnimate  = "2s"
+[params.logo]
+logoMark = ">"
+logoText = "$ cd /home/martinez"
+logoHomeLink = "/"
+# Set true to remove the logo cursor entirely.
+# logoCursorDisabled = false
+# Set to a valid CSS color to change the cursor in the logo.
+# logoCursorColor    = "#67a2c9"
+# Set to a valid CSS time value to change the animation duration, "0s" to disable.
+# logoCursorAnimate  = "2s"
 
-  [params.portrait]
-    path     = "/img/image.webp"
-    alt      = "Portrait"
-    maxWidth = "50px"
+[params.portrait]
+path = "/img/image.webp"
+alt = "Portrait"
+maxWidth = "50px"
 
-  # Social icons
-  [[params.social]]
-    name = "twitter"
-    url  = "https://twitter.com/marcom4rtinez"
+# Social icons
+[[params.social]]
+name = "twitter"
+url = "https://twitter.com/marcom4rtinez"
 
 #   [[params.social]]
 #     name = "email"
 #     url  = "mailto:nobody@example.com"
 
-  [[params.social]]
-    name = "github"
-    url  = "https://github.com/marcom4rtinez"
+[[params.social]]
+name = "github"
+url = "https://github.com/marcom4rtinez"
 
-  [[params.social]]
-    name = "linkedin"
-    url  = "https://www.linkedin.com/in/marco-martinez-364461243/"
+[[params.social]]
+name = "linkedin"
+url = "https://www.linkedin.com/in/marco-martinez-364461243/"
 
-  [[params.social]]
-    name = "dev"
-    url  = "https://github.com/KMU-Incident-Response"
+[[params.social]]
+name = "dev"
+url = "https://github.com/KMU-Incident-Response"
 
 # [languages]
 #   [languages.en]
@@ -169,11 +169,15 @@ disableHugoGeneratorInject = false
 
 
 [menu]
+# [[menu.main]]
+#   identifier = "blog"
+#   name       = "Blog"
+#   url        = "blog/"
 #   [[menu.main]]
 #     identifier = "about"
 #     name       = "About"
 #     url        = "about/"
-#   [[menu.main]]
-#     identifier = "posts"
-#     name       = "Posts"
-#     url        = "posts/"
+# [[menu.main]]
+#   identifier = "posts"
+#   name       = "Posts"
+#   url        = "posts/"
